--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="main">
 
     <div id="back"></div>
+
     <div id="top">
+
         <div id="workingArea">
 
             <div id="nav">
@@ -28,6 +30,39 @@
 
             <div id="hero">
                 
+                <div id="heroLeft">
+                    <div class="elem">
+                        <h1>David chang</h1>
+                        <h1>B</h1>
+                        <h1>C</h1>
+                        <h1>D</h1>
+                        <h1>E</h1>
+                    </div>
+
+                    <div class="elem">
+                        <h1>A1</h1>
+                        <h1>B1</h1>
+                        <h1>C1</h1>
+                        <h1>D1</h1>
+                        <h1>E1</h1>
+                    </div>
+
+                    <div class="elem">
+                        <h1>A2</h1>
+                        <h1>B2</h1>
+                        <h1>C2</h1>
+                        <h1>D2</h1>
+                        <h1>E2</h1>
+                    </div>
+
+                    <button> Explore Now</button>
+
+
+
+                </div>
+
+                <div id="heroRight"></div>
+
             </div>
 
         </div>
