done.have to work on responsiveness

--- a/index.html
+++ b/index.html
@@ -1,74 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Modern Landing Page</title>
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="main">
+      <div id="back">
+        <img src="./Assets/IMG_7564.jpg" alt="img1" />
+        <img src="./Assets/IMG_7565.jpg" alt="img1" />
+        <img src="./Assets/IMG_7566.jpg" alt="img1" />
+        <img src="./Assets/IMG_7567.jpg" alt="img1" />
+        <img src="./Assets/IMG_7568.jpg" alt="img1" />
+      </div>
 
-    <div id="back"></div>
-
-    <div id="top">
-
+      <div id="top">
         <div id="workingArea">
+          <div id="nav">
+            <div id="nav_left">
+              <img src="./Assets//raybanlogo.png" alt="logo" srcset="" />
+              <a href="#">Products</a>
+              <a href="#">About</a>
+            </div>
+            <div id="nav_right">
+              <a href="#">LUXE</a>
+              <a href="#">PRICING</a>
+            </div>
+          </div>
 
-            <div id="nav">
-                <div id="nav_left">
-                    <img src="./Assets//raybanlogo.png" alt="logo" srcset="">
-                    <a href="#">Products</a>
-                    <a href="#">About</a>
-                </div>
-                <div id="nav_right">
-                    <a href="#">LUXE</a>
-                    <a href="#">PRICING</a>
-                </div>
-                
+          <div id="hero">
+            <div id="heroLeft">
+              <div class="elem">
+                <h1>Ray-Ban Aviator</h1>
+                <h1>Classic</h1>
+                <h1>Iconic Design</h1>
+                <h1>Premium Quality</h1>
+                <h1>Timeless Style</h1>
+              </div>
+
+              <div class="elem">
+                <h1>Iconic.</h1>
+                <h1>A symbol of enduring style.</h1>
+                <h1>Crafted for the bold .</h1>
+                <h1>Exudes confidence .</h1>
+                <h1>Defining excellence .</h1>
+              </div>
+
+              <div class="elem">
+                <h1>Exclusive Offer!</h1>
+                <h1>Free Shipping on Your Order</h1>
+                <h1>Limited Edition Aviator Series</h1>
+                <h1>Unlock Extra Savings Today</h1>
+                <h1>Special Gift with Purchase</h1>
+              </div>
+
+              <button>Explore Now</button>
             </div>
 
-            <div id="hero">
-                
-                <div id="heroLeft">
-                    <div class="elem">
-                        <h1>David chang</h1>
-                        <h1>B</h1>
-                        <h1>C</h1>
-                        <h1>D</h1>
-                        <h1>E</h1>
-                    </div>
+            <div id="heroRight">
+              <p>
+                Lorem ipsum dolor sit amet
+                <!-- consectetur adipisicing elit.  -->
+                <!-- Aliquid vel quisquam ducimus nulla omnis eum nesciunt eveniet mollitia, perspiciatis quod quia quam tenetur officiis aperiam ratione quo id aspernatur beatae. -->
+              </p>
+              <div id="imgdiv"></div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolor consequuntur eveniet consequatur laboriosam corrupti ipsum
+                reprehenderit temporibus rerum eum molestias odio, doloribus
+                praesentium voluptatum, suscipit modi molestiae nobis atque
+                impedit? Mollitia, provident nobis!
+              </p>
 
-                    <div class="elem">
-                        <h1>A1</h1>
-                        <h1>B1</h1>
-                        <h1>C1</h1>
-                        <h1>D1</h1>
-                        <h1>E1</h1>
-                    </div>
-
-                    <div class="elem">
-                        <h1>A2</h1>
-                        <h1>B2</h1>
-                        <h1>C2</h1>
-                        <h1>D2</h1>
-                        <h1>E2</h1>
-                    </div>
-
-                    <button> Explore Now</button>
-
-
-
-                </div>
-
-                <div id="heroRight"></div>
-
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Deserunt, voluptates. Eius cupiditate, fugiat vitae velit
+                repellendus, consectetur nisi aut laboriosam a laudantium
+                adipisci perferendis architecto aliquam rerum cumque deleniti
+                debitis?
+              </p>
             </div>
-
+          </div>
         </div>
+      </div>
     </div>
 
-    </div>
-
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/sheryjs/dist/Shery.js"
+    ></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
